--- a/PhysicsExploration/PhysicsExploration.vcxproj
+++ b/PhysicsExploration/PhysicsExploration.vcxproj
@@ -142,6 +142,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="App.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Lighting.cpp" />
     <ClCompile Include="main.cpp" />
@@ -151,6 +152,7 @@
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="App.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="IndexObjLoader.h" />
     <ClInclude Include="Lighting.h" />
@@ -158,7 +160,7 @@
     <ClInclude Include="Model.h" />
     <ClInclude Include="objloaderIndex.h" />
     <ClInclude Include="Shader.h" />
-    <ClInclude Include="stdafx.h" />
+    <ClInclude Include="includes.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
