--- a/PhysicsExploration/PhysicsExploration.vcxproj
+++ b/PhysicsExploration/PhysicsExploration.vcxproj
@@ -143,6 +143,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="App.cpp" />
+    <ClCompile Include="CallbackHandler.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Lighting.cpp" />
     <ClCompile Include="main.cpp" />
@@ -153,6 +154,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="App.h" />
+    <ClInclude Include="CallbackHandler.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="IndexObjLoader.h" />
     <ClInclude Include="Lighting.h" />
