--- a/PhysicsExploration/PhysicsExploration.vcxproj.filters
+++ b/PhysicsExploration/PhysicsExploration.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="App.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CallbackHandler.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h">
@@ -69,6 +72,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="App.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CallbackHandler.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
