--- a/PhysicsExploration/PhysicsExploration.vcxproj
+++ b/PhysicsExploration/PhysicsExploration.vcxproj
@@ -162,6 +162,8 @@
     <ClCompile Include="MenuGUI.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="Model.cpp" />
+    <ClCompile Include="ModelLoading.cpp" />
+    <ClCompile Include="RenderingPipeline.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
@@ -183,7 +185,9 @@
     <ClInclude Include="MenuGUI.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="Model.h" />
+    <ClInclude Include="ModelLoading.h" />
     <ClInclude Include="objloaderIndex.h" />
+    <ClInclude Include="RenderingPipeline.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="includes.h" />
     <ClInclude Include="targetver.h" />
