--- a/PhysicsExploration/PhysicsExploration.vcxproj.filters
+++ b/PhysicsExploration/PhysicsExploration.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClCompile Include="ModelLoading.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="PhysicsSimulationsFactory.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h">
@@ -147,6 +150,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ModelLoading.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PhysicsSimulationsFactory.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
