--- a/PhysicsExploration/PhysicsExploration.vcxproj.filters
+++ b/PhysicsExploration/PhysicsExploration.vcxproj.filters
@@ -81,6 +81,12 @@
     <ClCompile Include="PhysicsSimulationsFactory.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Gravity.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GravitySimulation.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h">
@@ -153,6 +159,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="PhysicsSimulationsFactory.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Gravity.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GravitySimulation.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
